--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 15px;
+  align-items: center;
 }
 
 .l-footer-nav {
